RESOLVED FIXED280573
[FFC] Fix fast/flexbox/missing-repaint-when-flext-item-never-had-layout.html
https://bugs.webkit.org/show_bug.cgi?id=280573
Summary [FFC] Fix fast/flexbox/missing-repaint-when-flext-item-never-had-layout.html
alan
Reported 2024-09-28 15:37:08 PDT
ssia
Attachments
[fast-cq]Patch (1.34 KB, patch)
2024-09-28 15:46 PDT, alan
no flags
alan
Comment 1 2024-09-28 15:46:34 PDT
Created attachment 472723 [details] [fast-cq]Patch
EWS
Comment 2 2024-09-29 11:19:11 PDT
Committed 284433@main (645f2995bde6): <https://commits.webkit.org/284433@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472723 [details].
Radar WebKit Bug Importer
Comment 3 2024-09-29 11:20:16 PDT
Note You need to log in before you can comment on or make changes to this bug.