[FFC] Fix fast/flexbox/missing-repaint-when-flext-item-never-had-layout.html https://bugs.webkit.org/show_bug.cgi?id=280573

Reviewed by Antti Koivisto.

This repaint logic is copied from RenderFlexibleBox::layoutAndPlaceFlexItems.

* Source/WebCore/layout/integration/flex/LayoutIntegrationFlexLayout.cpp:
(WebCore::LayoutIntegration::FlexLayout::updateRenderers):

Canonical link: https://commits.webkit.org/284433@main